[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
#egui = "0.24"
#egui-wgpu = "0.24"
#egui-winit = { version = "0.24", default-features = false, features = ["links"]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = { path = "../.." }

winit_input_helper = "0.16"
egui = "0.27.2"
egui-wgpu = "0.27.2"

[dependencies.winit]
version = "0.29.4"
default-features = false
features = ["rwh_06"]






[dependencies.egui-winit]
version = "0.27.2"
default-features = false
features = ["clipboard", "wayland", "x11"]

[dependencies.egui_extras]
version = "0.27.2"
features = ["image"]